--- a/WsRecharge/Web.config
+++ b/WsRecharge/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=51.255.68.69;Database=admin_neejrecharge_mvc;Uid=NeejRecharge@MvcNew1;Password=NeejDudani@!$004" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=149.56.23.109;Database=admin_bansimobi_mvc;Uid=admin@bansimobi;Password=admin@bansimobi" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Database=ADMIN_RDUNIYA_MVC;Uid=sa;Password=abcd" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
